# rust-vuie-boilerplate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.vue
client/tests/: App.spec.ts
client/tests/__snapshots__/: App.spec.ts.snap
server/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
