[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
