[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
